--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     .options label {
       display: block;
       margin-bottom: 5px;
+      font-size: 16px;
     }
     .incorrect {
       background-color: #ffdddd;
